# rusty-crabs

./: Cargo.toml  README.md
client/: Cargo.toml
client/examples/: simple.rs
client/src/: events.rs  game.rs  lib.rs  loading.rs  main.rs  network.rs
server/: Cargo.toml
server/examples/: simple.rs
server/src/: main.rs
shared/: Cargo.toml
shared/src/: channel.rs  constants.rs  lib.rs  protocol.rs
